--- a/static/css/home.css
+++ b/static/css/home.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans',
     'DejaVu Sans', Verdana, 'sans-serif';
   background-color: white;
-  color: #333333;
+  color: #ffffff;
 }
 .navbar {
   background-color: black;
@@ -81,19 +81,20 @@ body {
   background-size: cover;
   /*background color: #000000;*/
 }
-.container {
+#sect1,
+#sect2,
+#sect3 {
   position: relative;
   height: 100vh;
   color: #ffffff;
 }
-#sect1 h2,
 #sect2 h2,
 #sect3 h2 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 20vh;
+  font-size: 5vh;
 }
 #sect1 {
   background: #c6ffdd; /* fallback for old browsers */
@@ -221,13 +222,14 @@ body {
     margin-left: 2.5%;
     padding: 30vh 0;
     /*position: absolute;*/
+    -ms-transform: translateY(-7vh);
+    transform: translateY(-7vh);
   }
-
   #feature1 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-4vh);
-    transform: translateY(-4vh);
+    -ms-transform: translateY(-11vh);
+    transform: translateY(-11vh);
     width: 6%;
     min-width: 30px;
     /*height: 15vh; */
@@ -237,9 +239,8 @@ body {
       0 6px 20px 0 rgba(0, 0, 0, 0.19);
     vertical-align: middle;
     border: none;
-    background-image: url(/static/images/speech-recognition-icon.jpg);
+    background-image: url(/static/images/speaker.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature1:after {
     content: '';
@@ -249,8 +250,8 @@ body {
   #feature2 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-4vh);
-    transform: translateY(-4vh);
+    -ms-transform: translateY(-11vh);
+    transform: translateY(-11vh);
     width: 6%;
     /*height: 80px; */
     border-radius: 50%;
@@ -261,7 +262,6 @@ body {
     border: none;
     background-image: url(/static/images/iris_control.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature2:after {
     content: '';
@@ -271,8 +271,8 @@ body {
   #feature3 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-4vh);
-    transform: translateY(-4vh);
+    -ms-transform: translateY(-11vh);
+    transform: translateY(-11vh);
     width: 6%;
     /*height: 80px; */
     border-radius: 50%;
@@ -283,7 +283,6 @@ body {
     border: none;
     background-image: url(/static/images/captions_icon.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature3:after {
     content: '';
@@ -293,8 +292,8 @@ body {
   #feature4 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-4vh);
-    transform: translateY(-4vh);
+    -ms-transform: translateY(-11vh);
+    transform: translateY(-11vh);
     width: 6%;
     /*height: 80px; */
     border-radius: 50%;
@@ -305,7 +304,6 @@ body {
     border: none;
     background-image: url(/static/images/braille-image.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature4:after {
     content: '';
@@ -315,8 +313,8 @@ body {
   #feature5 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-4vh);
-    transform: translateY(-4vh);
+    -ms-transform: translateY(-11vh);
+    transform: translateY(-11vh);
     width: 6%;
     /*height: 80px; */
     border-radius: 50%;
@@ -325,9 +323,8 @@ body {
       0 6px 20px 0 rgba(0, 0, 0, 0.19);
     vertical-align: middle;
     border: none;
-    background-image: url(/static/images/easeofaccess_icon.jpg);
+    background-image: url(/static/images/easyaccess.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature5:after {
     content: '';
@@ -337,8 +334,8 @@ body {
   #feature6 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-4vh);
-    transform: translateY(-4vh);
+    -ms-transform: translateY(-11vh);
+    transform: translateY(-11vh);
     width: 6%;
     /*height: 80px; */
     border-radius: 50%;
@@ -347,22 +344,21 @@ body {
       0 6px 20px 0 rgba(0, 0, 0, 0.19);
     vertical-align: middle;
     border: none;
-    background-image: url(/static/images/appearance_icon.jpg);
+    background-image: url(/static/images/settings.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature6:after {
     content: '';
     padding-bottom: 100%;
     display: block;
   }
-  #intro {
-    float: right;
+  #sect1 h2 {
     position: absolute;
-    top: 50%;
-    /*right: 50%;*/
-    transform: translate(0, -20%);
-    padding-left: 55vw;
+    bottom: 50%;
+    transform: translateY(340%);
+    font-size: 3vh;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 }
 @media (max-width: 800px) {
@@ -373,15 +369,16 @@ body {
     /*min-width: 300px;*/
     margin-left: auto;
     padding: 30vh 0;
+    transform: translateY(-20%);
     /*position: absolute;*/
   }
 
   #feature1 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-8vh);
-    transform: translateY(-8vh);
-    width: 7%;
+    -ms-transform: translateY(-23vh);
+    transform: translateY(-23vh);
+    width: 8%;
     min-width: 30px;
     /*height: 15vh; */
     border-radius: 50%;
@@ -391,9 +388,8 @@ body {
       0 6px 20px 0 rgba(0, 0, 0, 0.19);
     vertical-align: middle;
     border: none;
-    background-image: url(/static/images/speech-recognition-icon.jpg);
+    background-image: url(/static/images/speaker.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature1:after {
     content: '';
@@ -403,11 +399,10 @@ body {
   #feature2 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-8vh);
-    transform: translateY(-8vh);
-    width: 7%;
+    -ms-transform: translateY(-23vh);
+    transform: translateY(-23vh);
+    width: 8%;
     min-width: 30px;
-    /*height: 15vh; */
     border-radius: 50%;
     margin-left: 24vw;
     margin-right: auto;
@@ -417,7 +412,6 @@ body {
     border: none;
     background-image: url(/static/images/iris_control.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature2:after {
     content: '';
@@ -427,9 +421,9 @@ body {
   #feature3 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-8vh);
-    transform: translateY(-8vh);
-    width: 7%;
+    -ms-transform: translateY(-23vh);
+    transform: translateY(-23vh);
+    width: 8%;
     min-width: 30px;
     /*height: 15vh; */
     border-radius: 50%;
@@ -441,7 +435,6 @@ body {
     border: none;
     background-image: url(/static/images/captions_icon.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature3:after {
     content: '';
@@ -451,11 +444,10 @@ body {
   #feature4 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-8vh);
-    transform: translateY(-8vh);
-    width: 7%;
+    -ms-transform: translateY(-23vh);
+    transform: translateY(-23vh);
+    width: 8%;
     min-width: 30px;
-    /*height: 15vh; */
     border-radius: 50%;
     margin-left: 44vw;
     margin-right: auto;
@@ -465,7 +457,6 @@ body {
     border: none;
     background-image: url(/static/images/braille-image.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature4:after {
     content: '';
@@ -475,11 +466,10 @@ body {
   #feature5 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-8vh);
-    transform: translateY(-8vh);
-    width: 7%;
+    -ms-transform: translateY(-23vh);
+    transform: translateY(-23vh);
+    width: 8%;
     min-width: 30px;
-    /*height: 15vh; */
     border-radius: 50%;
     margin-left: 54vw;
     margin-right: auto;
@@ -487,9 +477,8 @@ body {
       0 6px 20px 0 rgba(0, 0, 0, 0.19);
     vertical-align: middle;
     border: none;
-    background-image: url(/static/images/easeofaccess_icon.jpg);
+    background-image: url(/static/images/easyaccess.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature5:after {
     content: '';
@@ -499,11 +488,10 @@ body {
   #feature6 {
     position: absolute;
     top: 50%;
-    -ms-transform: translateY(-8vh);
-    transform: translateY(-8vh);
-    width: 7%;
+    -ms-transform: translateY(-23vh);
+    transform: translateY(-23vh);
+    width: 8%;
     min-width: 30px;
-    /*height: 15vh; */
     border-radius: 50%;
     margin-left: 64.5vw;
     margin-right: auto;
@@ -511,38 +499,97 @@ body {
       0 6px 20px 0 rgba(0, 0, 0, 0.19);
     vertical-align: middle;
     border: none;
-    background-image: url(/static/images/appearance_icon.jpg);
+    background-image: url(/static/images/settings.jpg);
     background-size: cover;
-    cursor: pointer;
   }
   #feature6:after {
     content: '';
     padding-bottom: 100%;
     display: block;
   }
-  .reveal {
-    display: block;
-  }
   #intro {
     position: absolute;
-    /*top: 50%;*/
-    /*right: 50%;*/
-    transform: translate(0, -45%);
-    margin-right: 10%;
-    margin-left: 10%;
+    transform: translate(0, -100%);
+    margin-right: 5%;
+    margin-left: 5%;
     text-align: justify;
     letter-spacing: 1px;
+    top: 50%;
+    text-transform: uppercase;
+    font-size: 3vh;
+    color: #000000;
   }
-}
-.hidden {
-  display: none;
-}
-#intro h2 {
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
-#intro h3 {
-  font-weight: lighter;
+  #tut {
+    position: absolute;
+    transform: translate(0, -35%);
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 2.5vh;
+  }
+  .searchform {
+    transform: translate(0, 300%);
+    margin-left: 50%;
+  }
+  .searchform .button {
+    height: 5vh;
+    width: fit-content;
+    font-size: 2vh;
+  }
+  #tutorial {
+    transform: translateY(40%);
+    margin-left: 4.5%;
+    font-size: 2.25vw;
+    height: fit-content;
+  }
+  #intro_h3 {
+    transform: translateY(0%);
+    font-size: 2.5vh;
+    position: absolute;
+    margin-left: 5%;
+    margin-right: 5%;
+    color: #000000;
+    top: 50%;
+  }
+  .container.options {
+    transform: translateY(50%);
+    position: absolute;
+    top: 50%;
+    font-size: 2.5vh;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  #appearance_settings {
+    transform: translateY(31%);
+    position: absolute;
+    top: 50%;
+    font-size: 2.5vh;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  #gesture_based_navigation {
+    transform: translateY(65%);
+    position: absolute;
+    top: 50%;
+    font-size: 2.5vh;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  #text_to_braille {
+    transform: translateY(55%);
+    position: absolute;
+    top: 50%;
+    font-size: 2.5vh;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  #sect1 h2 {
+    position: absolute;
+    bottom: 50%;
+    transform: translateY(270%);
+    font-size: 2.75vh;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
 }
 #tutorial {
   background: linear-gradient(57deg, #a43c58, #252141);
@@ -550,23 +597,236 @@ body {
   text-transform: uppercase;
   letter-spacing: 2px;
   width: fit-content;
-  padding-left: 2vw;
-  padding-right: 2vw;
-  height: fit-content;
-  padding-bottom: 1.5vw;
-  padding-top: 1.5vw;
+  padding-left: 1.5vw;
+  padding-right: 1.5vw;
+  padding-bottom: 0.5vw;
+  padding-top: 0.5vw;
   border-radius: 10%;
-  font-size: 1.5vw;
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans',
     'DejaVu Sans', Verdana, 'sans-serif';
 }
-@media (max-width: 200px) {
+@media (min-width: 945px) {
+  #tut {
+    float: left;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, 400%);
+    padding-left: 3vw;
+    margin-right: 45vw;
+  }
   #intro {
-    font-size: 2vw;
+    float: right;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(0, -125%);
+    text-transform: uppercase;
+    font-size: 4vh;
+    margin-left: 5vw;
+    color: #000000;
+  }
+  .searchform {
+    transform: translate(0, -350%);
+    margin-left: 3.5%;
+  }
+  #tutorial {
+    transform: translateY(-200%);
+    margin-left: 3.5%;
+    font-size: 1.5vw;
+    height: fit-content;
+  }
+  #intro_h3 {
+    transform: translateY(-60%);
+    font-size: 3vh;
+    float: right;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: 5vw;
+    color: #000000;
+  }
+  .container.options {
+    transform: translateY(25%);
+    float: right;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 3.5vh;
+    margin-left: 5vw;
+  }
+  .searchform .button {
+    height: 5.5vh;
+    width: fit-content;
+    font-size: 2.5vh;
   }
 }
-@media (min-width: 200px) {
+@media (min-width: 800px) and (max-width: 945px) {
+  #tut {
+    float: left;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, 150%);
+    padding-left: 3vw;
+    margin-right: 45vw;
+  }
   #intro {
-    font-size: 1.25vw;
+    float: right;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(0, -125%);
+    text-transform: uppercase;
+    font-size: 3.5vh;
+    margin-left: 5vw;
+    color: #000000;
+  }
+  .searchform {
+    transform: translate(0, -350%);
+    margin-left: 3.5%;
+  }
+  #tutorial {
+    transform: translateY(-200%);
+    margin-left: 3.5%;
+    font-size: 1.5vw;
+    height: fit-content;
+  }
+  #intro_h3 {
+    transform: translateY(-40%);
+    font-size: 3vh;
+    float: right;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: 5vw;
+    color: #000000;
+  }
+  .container.options {
+    transform: translateY(50%);
+    float: right;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 3vh;
+    margin-left: 5vw;
+  }
+  .searchform .button {
+    height: 5.5vh;
+    width: fit-content;
+    font-size: 2.5vh;
+  }
+}
+
+/*for slideshow*/
+* {
+  box-sizing: border-box;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  transform: translateY(300%);
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+  transform: translateY(300%);
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  transform: translateY(300%);
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+  transform: translateY(300%);
+}
+
+/* Number text (1/3 etc) */
+.number {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+  transform: translateY(0%);
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  transform: translateY(2500%);
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
   }
 }
